package.json 충돌 해결

--- a/package.json
+++ b/package.json
@@ -1,6 +1,30 @@
 {
   "name": "gilnyangbot",
   "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mywhales029-tech/GilNyangBot.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mywhales029-tech/GilNyangBot/issues"
+  },
+  "homepage": "https://github.com/mywhales029-tech/GilNyangBot#readme",
+  "dependencies": {
+    "discord.js": "^14.23.2",
+    "dotenv": "^17.2.3"
+  }
+}
+{
+  "name": "gilnyangbot",
+  "version": "1.0.0",
   "main": "index.js",
   "type": "module",	
   "dependencies": {
