--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "prefix": "!",
+  "prefix": "&",
   "introRoleName": "Verified",
   "introChannelName": "자기소개",
   "logChannelName": "bot-logs",
